# src/routes/choice-routes.ts
@@ -5,7 +5,7 @@ import { verifyUserRoleMiddleware } from "../middlewares/verify-user-role";
 const choiceRouter = Router();
 
 choiceRouter.get("/choices/:id", getChoiceByIdController);
-choiceRouter.get("/choices/list/exerciseId", listChoicesByExerciseController);
+choiceRouter.get("/choices/list/:exerciseId", listChoicesByExerciseController);
 choiceRouter.post("/choices", verifyUserRoleMiddleware, createChoiceController);
 choiceRouter.put("/choices/:id", verifyUserRoleMiddleware, updateChoiceController);
 choiceRouter.delete("/choices/:id", verifyUserRoleMiddleware, deleteChoiceController);
